--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<title>thingy cool webbysito :)</title>
 	</head>
 	<body>
-		<video src="./vid.mp4" width="100%" controls autoplay>
+		<video width="100%" controls autoplay>
+			<source src="./vid.mp4" type="video/mp4">
+		</video>
 	</body>
 </html>
