--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<video width="100%" controls autoplay>
-			<source src="./vid.mp4" type="video/mp4">
+			<source src="./vid1.mp4" type="video/mp4">
 		</video>
 	</body>
 </html>
