--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
 		</style>
 	<head>
-		<title>thingy cool webbysito :)</title>
+		<title>random videos i found online</title>
+        <meta name="description" content="u actually heard that right, this website is full of shitty shitposts so if u want to see some then idk yeah just open the site lel.">
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
+        <meta name="viewport" content="width=device-width"/>
 	</head>
 	<body>
 		<video width="100%" controls autoplay>
-			<source src="./vid1.mp4" type="video/mp4">
+			<source src="https://randomizer.thingytv.online/video" type="video/mp4">
 		</video>
 	</body>
 </html>
