--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
 <html>
-	<style type="text/css">
-			*, body, html, video, source {
+<style type="text/css">
+    /* *, body, html, video, source {
 				margin: 0;
 				padding: 0;
 			}
 			video {
 				width:100%;
 				height:auto;
-			}
+			} */
+    body {
+        background-color: black;
+        margin: 0;
+        padding: 0;
+    }
+    .video-container {
+        width: 100%;
+        height: calc(100vw * 9 / 16);
+        position: relative;
+    }
 
-		</style>
-	<head>
-		<title>random videos i found online</title>
-        <meta name="description" content="u actually heard that right, this website is full of shitty shitposts so if u want to see some then idk yeah just open the site lel.">
-        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
-        <meta name="viewport" content="width=device-width"/>
-	</head>
-	<body>
-		<video width="100%" controls autoplay>
-			<source src="https://randomizer.thingytv.online/video" type="video/mp4">
-		</video>
-	</body>
+    video {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+</style>
+
+<head>
+    <title>random videos i found online</title>
+    <meta name="description"
+        content="u actually heard that right, this website is full of shitty shitposts so if u want to see some then idk yeah just open the site lel.">
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="viewport" content="width=device-width" />
+</head>
+
+<body>
+    <div class="video-container">
+        <video controls autoplay>
+            <source src="https://randomizer.thingytv.online/video" type="video/mp4">
+        </video>
+    </div>
+</body>
+
 </html>
